@@ -19,6 +19,8 @@
  * CDDL HEADER END
  */
 
+/* @@timeout: 500 */
+
 /*
  * Copyright 2006 Oracle, Inc.  All rights reserved.
  * Use is subject to license terms.
