@@ -1,0 +1,6 @@
+                   FUNCTION:NAME
+                          :BEGIN 
+
+-- @@stderr --
+dtrace: script 'test/unittest/buffering/tst.resize1.d' matched 1 probe
+dtrace: buffer size lowered to 200m
