@@ -1,0 +1,7 @@
+                   FUNCTION:NAME
+                          :BEGIN 
+
+  dtrace                                                            1
+-- @@stderr --
+dtrace: script 'test/unittest/buffering/tst.resize2.d' matched 1 probe
+dtrace: aggregation size lowered to 200m
